feat: add interaction actions update: swagger OpenAPI documentation
